<resources>

  <!--View Titles-->
  <string name="app_name">Steganografi</string>
  <string name="select_image_title">Cover Image</string>
  <string name="stego_image_title">Result Image</string>
  <string name="decrypt_result_title">Secret Message</string>
  <string name="secret_message_title">Secret Message Type</string>
  <string name="rb_secret_text">Text</string>
  <string name="rb_secret_image">Image</string>
  <string name="b_secret_text_encrypt">Encrypt</string>
  <string name="b_secret_text_decrypt">Decrypt</string>
  <string name="b_stego_image_share">Share</string>
  <string name="b_stego_image_save">Save</string>
  <string name="et_secret_text">Message&#8230;</string>
  <string name="take_image_dialog">Take Photo</string>
  <string name="select_image_dialog">Select Image</string>
  <string name="cancel">Cancel</string>
  <string name="choose_image">Choose Image</string>

  <!--Messages-->
  <string name="encrypted_success">Message is successfully encrypted !</string>
  <string name="encrypted_fail">Failure during message encryption</string>
  <string name="decrypt_success">Message is successfully decrypted</string>
  <string name="decrypt_fail">Failure during message decryption</string>
  <string name="compress_error">Failure during image compression</string>
  <string name="save_image_success">Stego Image was successfully saved !</string>
  <string name="save_image_error">Failure during image saving</string>
  <string name="cover_image_empty">Please, select cover image</string>
  <string name="image_is_saved">Stego Image is already saved on device</string>
  <string name="secret_image_empty">Please, select secret image</string>
  <string name="secret_message_long">Secret message is too long</string>
  <string name="stego_image_not_selected">Stego Image is not selected !</string>
  <string name="non_stego_image_selected">Selected image is not a proper Stego Image</string>
  <string name="wrong_password">Wrong Password</string>
  <string name="secret_text_empty">Text field is empty !</string>
  <string name="password_kurang">Password harus 6 karakter</string>
  <string name="password_text_empty">Password field is empty !</string>
</resources>
