<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_encrypt"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="alexparunov.steganographer.MainActivity">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:minHeight="?attr/actionBarSize"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
  </android.support.v7.widget.Toolbar>

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryBlack"
        android:text="@string/select_image_title"
        android:textSize="@dimen/medium_text_dim"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/ivCoverImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/select_image_title"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_message_title"
        android:textSize="@dimen/medium_text_dim"
        android:textColor="@color/colorPrimaryBlack"
        android:layout_gravity="center"/>

    <RadioGroup
        android:id="@+id/rgSecretMessageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <RadioButton
          android:id="@+id/rbText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rb_secret_text"
          android:checked="true"/>

      <RadioButton
          android:id="@+id/rbImage"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rb_secret_image"/>
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/et_secret_text"
        android:id="@+id/etSecretMessage"/>

    <ImageView
        android:layout_width="@dimen/large_image_square"
        android:layout_height="@dimen/large_image_square"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/ivSecretImage"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="6"
        android:ems="10"
        android:hint="Password"
        android:id="@+id/password"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/b_secret_text_encrypt"
        android:textColor="@color/colorPrimaryWhite"
        app:backgroundTint="@color/colorBlueGreySecondary" />

  </LinearLayout>

</LinearLayout>